# data_provider

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  docker-entrypoint.sh  main.py  pyproject.toml
.github/workflows/: check_pr.yaml
docs/: openapi.json
nginx/etc/nginx/conf.d/: default.conf.tmp
src/data_provider/: app_factory.py
src/data_provider/api/v1/: __init__.py  csgo_game.py
src/data_provider/api/v1/dependencies/: __init__.py
src/data_provider/core/: __init__.py
src/data_provider/core/logger/: __init__.py
src/data_provider/core/settings/: __init__.py  app.py
src/data_provider/interfaces/: __init__.py
src/data_provider/interfaces/core/: __init__.py
src/data_provider/interfaces/repositories/: __init__.py
src/data_provider/interfaces/services/: __init__.py
src/data_provider/repositories/: __init__.py  league.py  map.py  player.py  round.py  serie.py  stat.py  team.py  tournament.py
src/data_provider/schemas/: __init__.py  csgo_game.py  league.py  map.py  match.py  player.py  round.py  serie.py  stat.py  team.py  team_opponent_player_stat.py  tournament.py
src/data_provider/schemas/mixins/: __init__.py  id.py  name.py  updated_at.py
src/data_provider/services/: __init__.py  csgo_game.py
src/data_provider/utils/: __init__.py  singleton.py
tests/unit/src/core/: test_logger.py
tests/unit/src/repositories/: test_league.py  test_map.py  test_player.py  test_round.py  test_serie.py  test_stat.py  test_team.py  test_tournament.py
tests/unit/src/services/: test_csgo_game.py
tests/unit/src/utils/: test_singleton.py
(+24 files in other folders)
